--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "figma-tokens:build": "node bin/figma-tokens-build.js",
     "release": "node scripts/release.js",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "deploy": "storybook-to-ghpages"
   },
   "keywords": [
     "cli",
@@ -47,6 +48,7 @@
     "@storybook/blocks": "^7.0.24",
     "@storybook/html": "^7.0.24",
     "@storybook/html-webpack5": "^7.0.24",
+    "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/testing-library": "^0.0.14-next.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
