--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
   },
   "scripts": {
     "test": "exit 0",
-    "figma-tokens": "npm run figma-tokens:api && npm run figma-tokens:build",
+    "figma-tokens": "npm run figma-tokens:api && npm run tokens:build",
     "figma-tokens:api": "node bin/figma-tokens-api.js",
     "figma-tokens:build": "node bin/figma-tokens-build.js",
+    "tokens:build": "style-dictionary build",
     "release": "node scripts/release.js",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
@@ -42,17 +43,18 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.5",
-    "@storybook/addon-essentials": "^7.0.24",
-    "@storybook/addon-interactions": "^7.0.24",
-    "@storybook/addon-links": "^7.0.24",
-    "@storybook/blocks": "^7.0.24",
-    "@storybook/html": "^7.0.24",
-    "@storybook/html-webpack5": "^7.0.24",
+    "@storybook/addon-essentials": "^7.0.26",
+    "@storybook/addon-interactions": "^7.0.26",
+    "@storybook/addon-links": "^7.0.26",
+    "@storybook/blocks": "^7.0.26",
+    "@storybook/html": "^7.0.26",
+    "@storybook/html-webpack5": "^7.0.26",
     "@storybook/storybook-deployer": "^2.8.16",
-    "@storybook/testing-library": "^0.0.14-next.2",
+    "@storybook/testing-library": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "standard": "17.0.0",
-    "storybook": "^7.0.24"
+    "storybook": "^7.0.26",
+    "style-dictionary": "^3.8.0"
   }
 }
